--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 
 /* Home Page  */
 .homepage {
-    position: relative;
+  position: relative;
   background-color: rgb(113, 54, 6);
-  /* background-image: url('img3.webp'); */
-  background: linear-gradient(rgba(54, 44, 44, 0.5),rgba(34, 28, 28, 0.5)),url('img3.webp');
+  background: linear-gradient(rgba(54, 44, 44, 0.5), rgba(34, 28, 28, 0.5)),
+    url("assets/home-main-image.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
+  max-width: 100%;
   margin: 30px;
   border-radius: 20px;
 }
@@ -24,7 +24,8 @@
   flex-wrap: wrap;
   align-items: center;
   border-bottom: 1px solid white;
-  padding: 30px;
+  padding: 20px;
+  max-height: 5%;
 }
 .mainLogo {
   width: 25%;
@@ -38,10 +39,15 @@
   height: 5%;
 }
 .nav-menu {
+    display: flex;
+  flex-wrap: wrap;
   font-family: "Public Sans";
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   color: #ffffff;
+}
+.nav-menu:hover {
+  color: #b0c4bb;
 }
 .searchBar-bookingAppoinments {
   display: flex;
@@ -75,14 +81,20 @@
   width: 270px;
   height: 50px;
 }
-.arrow-button {
-  width: 22px;
-  height: 23px;
+
+.appoinment-Btn:hover .arrow-button {
+  background-color: white;
+  content: url(assets/arrow-button-home-black.png);
+  background-size: cover;
+}
+.appoinment-Btn:hover {
+  background-color: white;
+  color: #1c1d1c;
 }
 
 /* Name Container Page */
 .main-name-container {
-    
+  transition: 1s;
   padding: 90px 80px;
 }
 .patients-number-home {
@@ -97,7 +109,7 @@
 }
 .patientsnum {
   margin: 0px;
-  padding: 10px;
+  padding: 20px;
   font-family: "Public Sans";
   font-size: 16px;
   color: #b0c4bb;
@@ -105,6 +117,7 @@
 .main-name-heading-home {
   margin: 0px;
   border: 0px;
+  padding: 10px 0px;
   font-family: "Tenor Sans";
   font-size: 70px;
   color: #ffffff;
@@ -131,7 +144,40 @@
   width: 100%;
   padding: 30px;
 }
-.openingtiming-home {
+
+.welcome-page {
+  flex-wrap: wrap;
+  margin: 80px 0px;
+  padding: 40px;
 }
-.address-home {
+.welcome-container{
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+justify-content: center;
+padding: 0px 300px;
+width: 100%;
+row-gap: 30px;
+  
+}
+.welcome-heading{
+  font-family: 'Tensor sans';
+  font-size: 24px;
+  color: #b7aca0;
+  text-align: center;
+  letter-spacing: 1px;
+}
+.treatments-provide{
+  font-family: 'Tensor Sans';
+  font-size: 60px;
+color: #4e4e53;
+text-align: center;
+letter-spacing: 2px;
+}
+.treatments-description{
+  font-family: 'Public sans';
+  font-size: 20px;
+  color: #687268;
+text-align: center;
+font-weight: lighter;
 }
