--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+/* fixed content skin and buynow */
 .fixed-skin-buynow {
   position: fixed;
   padding: 14px 5px 9px;
@@ -11,32 +12,28 @@
   font-family: "Public sans";
   font-size: 14px;
   color: #ffffff;
-  margin-top: 100px;
   top: 0;
   right: 0;
+  margin-top: 100px;
 }
-.skin-fixed {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 5px;
-  background-color: #ff833b;
-  width: 80px;
-  height: 80px;
-}
+.skin-fixed,
 .buynow-fixed {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #07ca6c;
   width: 80px;
   height: 80px;
+}
+.skin-fixed {
+  margin-bottom: 5px;
+  background-color: #ff833b;
+}
+.buynow-fixed {
+  background-color: #07ca6c;
 }
 
 /* Home Page  */
 .homepage {
-  /* position: relative; */
-  background-color: rgb(113, 54, 6);
   background: linear-gradient(rgba(54, 44, 44, 0.5), rgba(34, 28, 28, 0.5)),
     url("assets/home-main-image.webp");
   background-size: cover;
@@ -54,7 +51,7 @@
   align-items: center;
   border-bottom: 1px solid white;
   padding: 20px;
-  max-height: 5%;
+  min-height: 5%;
 }
 
 .mainLogo {
@@ -138,7 +135,7 @@
 .patients-number-home {
   display: flex;
   align-items: center;
-  width: 50%;
+  /* width: 100%; */
 }
 
 .five-star {
@@ -158,7 +155,7 @@
 .main-name-heading-home {
   margin: 0px;
   border: 0px;
-  padding: 10px 0px;
+  padding: 20px 0px;
   font-family: "Tenor Sans";
   font-size: 70px;
   color: #ffffff;
@@ -299,7 +296,6 @@
   display: flex;
   justify-content: center;
   width: 50%;
-  scroll-margin: 20px;
 }
 
 .drop-down-image {
@@ -430,6 +426,7 @@
   align-items: center;
   justify-content: space-around;
   margin-bottom: 150px;
+  padding: 0px 40px;
 }
 
 .better-header {
@@ -448,12 +445,14 @@
 /* our philosophy desc and image */
 .desc-container {
   display: flex;
-  /* max-height: auto; */
+  width: 100%;
+  padding: 0px 40px;
+  height: 650px;
+
 }
 
 .image-container-ourphilosophy {
-  max-width: 50%;
-  max-height: 712px;
+  width: 50%;
 }
 
 .description-container {
@@ -468,11 +467,12 @@
     url("assets/ourphilosophy/bg-img-philosophy.webp");
   align-items: end;
   padding: 80px;
-  max-width: 50%;
+  width: 50%;
 }
 
 .philosophy-img {
   width: 100%;
+  height: 650px;
 }
 
 .philosophy-desc {
@@ -518,6 +518,7 @@
 }
 
 .betterTodayimg {
+ 
   position: absolute;
 }
 
@@ -831,7 +832,7 @@
 .pcont {
   border-radius: 30px;
   width: 42%;
-  min-height: 700px;
+  height: 700px;
   padding: 60px;
 }
 
@@ -1080,4 +1081,342 @@
   content: url(assets/footer/x-black.png);
   width: 25px;
   height: 25px;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 800px) {
+  /* HOME PAGE */
+  .homepage {
+    margin: 0px;
+    border-radius: 0px;
+  }
+
+  .nav-bar-page-links {
+    width: 80%;
+  }
+  .nav-menu {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+  }
+  .mainLogo,
+  .booking-Appoinment-Button,
+  .details-main-home,
+  br,
+  .question-logo, 
+  .question-page-logo-container,
+  .wellness  {
+    
+    display: none;
+  }
+  .main-name-container {
+    transition: none;
+  }
+  .searchBar-bookingAppoinments {
+    min-width: 20%;
+  }
+  .main-name-heading-home {
+    font-size: 36px;
+  }
+  /* Name Container Page */
+  .main-name-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 250px 50px;
+  }
+
+  /* Welcome Page */
+  .welcome-page {
+    margin: 0px;
+    padding: 20px;
+  }
+  .welcome-container {
+    padding: 60px 0px;
+  }
+  .treatments-provide {
+    font-size: 34px;
+    letter-spacing: 1px;
+  }
+  .treatments-description {
+    font-size: 18px;
+  }
+  .common-conditions-main-bg-container {
+    /* width: 100%; */
+    padding: 80px 40px;
+    height: 906px;
+  }
+  /* Common Conditions */
+  .conditions-container {
+    margin: 0px;
+    padding: 0px;
+  }
+  .conditions-header {
+    font-size: 34px;
+    letter-spacing: 1px;
+    word-spacing: 0px;
+    margin-bottom: 40px;
+  }
+
+  .common-conditions-header {
+    max-width: 100%;
+  }
+
+  /* Drop down and images, common condition */
+  .drop-down-common-conditions {
+    display: inline;
+  }
+  .drops-container {
+    width: 100%;
+  }
+  .drop {
+    font-size: 20px;
+    width: 100%;
+    padding: 30px;
+    border-radius: 10px;
+  }
+
+  /* Drop Image Section */
+  .drop-section-image {
+    width: 100%;
+  }
+  .drop-down-image {
+    content: url(assets/common-conditions/common-condition-image-2.webp.jpg);
+    margin-top: 60px ;
+    width: 100%;
+    border-radius: 150px 150px 560px 560px;
+    height: 406px;
+    padding: 0px 40px;
+  }
+
+  /* review section */
+  .review-section-page {
+    margin: 0px 0px 50px;
+  }
+  .review-images-section {
+    margin: 70px 68px 0px;
+  }
+  .review-header-name {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 34px;
+  }
+  .review-container1,
+  .review-container2,
+  .review-container3 {
+    position: relative;
+    border-radius: 0px 0px 30px 30px;
+    width: 100%;
+  }
+  .review-header {
+    display: inline;
+    margin: 0px;
+  }
+  .more-review-button {
+    width: 200px;
+    padding: 20px;
+    font-weight: 0px;
+  }
+
+  /* Review Section images */
+  .review-images-section {
+    display: inline;
+  }
+  .review-image-container1,
+  .review-image-container2,
+  .review-image-container3 {
+    display: inline;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+  }
+  .reviewImages {
+    width: 100%;
+    border-radius: 30px 30px 0px 0px;
+  }
+
+  
+/* OUR PHILOSOPHY */
+.our-Philosophy {
+  margin-bottom: 60px;
+}
+.feel-better-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 80px;
+}
+.better-header{
+  font-size: 50px;
+  word-spacing: 0px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+.better-image{
+  width: 40px;
+  height: 40px;
+}
+.desc-container{
+display: inline;
+}
+.image-container-ourphilosophy,
+.description-container{
+  width: 100%;
+  margin: 0px;
+}
+.description-container{
+  padding: 50px;
+}
+.philosophy-desc{
+  font-size: 25px;
+  letter-spacing: 1px;
+}
+ /* service page */ 
+ .service-section{
+  margin: 0px;
+  padding: 0px 40px;
+ }
+ .service-header{
+  display: inline;
+ }
+
+ .main-header-service,
+.desc-header-service {
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  width: 100%;
+}
+.header-service{
+font-size: 34px;
+padding-bottom: 20px;
+}
+.desc-head {
+  font-size: 16px;
+}
+/* service image */
+.Thumbnail-image-service{
+  width: 100%;
+}
+
+/* Question-page */
+.question-page{
+  padding: 50px 40px 40px;
+}
+.question-container-header-questions{
+  display: inline;
+}
+.question-container{
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+}
+.main-head-questions{
+  font-size: 34px;
+}
+.questions-desc{
+  width: 100%;
+}
+.question-dropdown{
+  font-size: 20px;
+  word-spacing: 0px;
+}
+/* .question-page-logo-container {
+  padding: 40px 10px 0px;
+  display: inline;
+  justify-content: space-evenly;
+ 
+}
+.question-logo{
+  width: 75px;
+  height: 50px;
+} */
+
+/* health care page */
+.healthcare-section{
+  margin-bottom: 40px;
+}
+.main-header-wellness{
+  padding-top: 20px;
+  font-size: 36px;
+}
+
+/* Wellness Blog */
+.wellness-header{
+  min-height: 60px;
+}
+.welcome-blog-page{
+  margin-bottom: 40px;
+  padding: 0px 20px;
+}
+.image-desc-wellness-blog{
+  display: inline;
+  margin: 0px;
+
+}
+.wellness-container-img {
+  width: 100%;
+  padding: 20px;
+}
+.view-more-wellness{
+  margin-top: 30px;
+}
+/* Specialist and Price guide */
+.team-price-container{
+  display: inline;
+}
+.pcont{
+  width: 100%;
+  height: auto;
+  padding: 50px;
+  margin: 20px;
+}
+.main-header-team{
+  margin: 70px 0px 10px;
+}
+.desc-team{
+  margin: 10px 0px 70px
+}
+
+/* footer section */
+.footer-section{
+  padding: 30px 40px 0px;
+}
+.footer-header{
+  display: inline;
+ border-bottom: none;
+}
+.main-header-footer{
+  width: 100%;
+  font-size: 28px;
+  text-align: center;
+}
+.input-footer{
+  width: 100%;
+  padding: 20px;
+}
+.email-btn{
+  width: 400px;;
+}
+.footer-description{
+  display: inline;
+  text-align: center;
+  padding: 100px 0px;
+}
+.logo-icons-footer{
+  display: inline;
+}
+.column-header-footer{
+  font-size: 18px;
+  font-weight: 600;
+}
+.links-li-footer{
+  font-size: 16px;
+}
+.footer-desc-container {
+  display: inline;
+}
+
 }
