--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 /* fixed content skin and buynow */
 .fixed-skin-buynow {
   position: fixed;
-  padding: 14px 5px 9px;
+  padding: 14px 0px 9px;
   text-align: center;
   font-family: "Public sans";
   font-size: 14px;
@@ -881,6 +881,8 @@
 
 /* Specialist and Price guide */
 .team-price-main-container {
+  display: flex;
+  justify-content: center;
   padding: 0px 40px;
   margin-bottom: 150px;
 }
@@ -1412,7 +1414,7 @@
   .wellness-header {
     min-height: 60px;
   }
-  #welcome-blog-page {
+  .welcome-blog-page {
     margin-bottom: 40px;
     padding: 0px 20px;
   }
